# AUTOCAD-MCP

./: .gitignore  LICENSE  README.md  pyproject.toml  readme-eng.md
src/autocad_mcp/: __init__.py  cad_controller.py  config.json  config.py  nlp_processor.py  server.py
